[gd_scene load_steps=10 format=3 uid="uid://dmp45qwbrdno6"]

[ext_resource type="Texture2D" uid="uid://opliqqpdl87g" path="res://assets/Entities/Npc's/Wizzard/Idle/Idle-Sheet.png" id="1_0iovw"]
[ext_resource type="Script" uid="uid://b8srhlwhnv76c" path="res://scenes/NPC/wizzard_begin.gd" id="1_w0hvq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w0hvq"]
atlas = ExtResource("1_0iovw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iijnf"]
atlas = ExtResource("1_0iovw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouvvs"]
atlas = ExtResource("1_0iovw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i75fa"]
atlas = ExtResource("1_0iovw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ag63q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0hvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iijnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouvvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i75fa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iovw"]
size = Vector2(53.8618, 3.47561)

[sub_resource type="CircleShape2D" id="CircleShape2D_w0hvq"]
radius = 154.029

[node name="Wizzard_CharacterBody2D" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_w0hvq")

[node name="wizzard_Wiz_AnimatedBody2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(2.121, 2.58104)
sprite_frames = SubResource("SpriteFrames_ag63q")
animation = &"idle"
frame_progress = 0.286381
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -2)
scale = Vector2(0.984, 0.984)
shape = SubResource("RectangleShape2D_0iovw")

[node name="Interate_Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interate_Area2D"]
shape = SubResource("CircleShape2D_w0hvq")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 10
offset_left = -100.0
offset_top = -123.0
offset_right = 111.0
offset_bottom = -100.0
text = "Hmmmmmmmmmmmmm"

[connection signal="body_entered" from="Interate_Area2D" to="." method="_on_interate_area_2d_body_entered"]
[connection signal="body_exited" from="Interate_Area2D" to="." method="_on_interate_area_2d_body_exited"]
